* Wed Nov 15 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.3-0
- Aligned the EL7 disa_stig profile with the latest SSG content
- Fixed several parameters with incorrect data types

* Mon Oct 03 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.3.2-0
- Fix discrepancies between NIST and DISA compliance profiles

* Fri Sep 22 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.3.1-0
- Refactor report generator to use a shared file format parser/compiler.
- Add vendored 'profiles-in-modules' support

* Tue Sep 19 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.1-0
- Remove test link to allow module to be published to PuppetForge

* Tue Sep 05 2017 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 2.3.0-0
- Converted compliance profiles to JSON.  This allows non-string values
  and faster deserialization.
- Provided scripts in 'utils/' to convert the compliance profiles from
  YAML to JSON and vice versa.

* Mon Jun 16 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.2.0-0
- Added a compliance enforcement hierav3 and hierav5 backend.

* Sat Jun 10 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.1.0-0
  - Documented the report format in the README
  - Added the defaut SIMP compliance profiles to the module data
  - Enhanced the lookup mapper function to take an optional default map
  - Passed the internal data as the default map
  - Added client metadata to the compliance report for easier analysis
  - Fixed several minor processing bugs
  - Added the documented, but missing, regular expression match capability
  - Confine puppet version in metadata.json

* Tue Feb 28 2017 Nick Miller <nick.miller@onyxpoint.com> - 2.0.1-0
  - travis.yml and gemfile updates

* Fri Oct 28 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-0
  - New map format
  - New output format
    - Added compliant values
    - Added missed parameters
    - Added missing class references
    - Added server-side storage
  - Added a conversion utility in the 'utils' directory
