@@ -24,6 +24,9 @@
           "CCI-001814",
           "CCI-000368"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_aide_periodic_cron_checking"
+        ],
         "value": true
       },
       "aide::logrotate::rotate_period": {
@@ -54,6 +57,9 @@
           "CCI-001744",
           "SRG-OS-000363-GPOS-00150"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_aide_periodic_cron_checking"
+        ],
         "value": 5
       },
       "aide::hour": {
@@ -61,12 +67,18 @@
           "CCI-001744",
           "SRG-OS-000363-GPOS-00150"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_aide_periodic_cron_checking"
+        ],
         "value": 4
       },
       "aide::weekday": {
         "identifiers": [
           "CCI-001744",
           "SRG-OS-000363-GPOS-00150"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_aide_periodic_cron_checking"
         ],
         "value": 0
       },
@@ -78,6 +90,17 @@
           "SRG-OS-000042-GPOS-00020",
           "CCI-002234",
           "CCI-000135"
+        ],
+        "value": true
+      },
+      "auditd::config::audit_profiles::simp::audit_mount": {
+        "identifiers": [
+          "SRG-OS-000042-GPOS-00020",
+          "SRG-OS-000392-GPOS-00172",
+          "CCI-002884"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_audit_rules_media_export"
         ],
         "value": true
       },
@@ -99,6 +122,14 @@
           "RHEL-07-030402",
           "RHEL-07-030403",
           "RHEL-07-030400"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_fremovexattr",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_fsetxattr",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_lremovexattr",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_lsetxattr",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_removexattr",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_setxattr"
         ],
         "value": true
       },
@@ -122,6 +153,11 @@
           "RHEL-07-030400"
         ],
         "notes": "SIMP disables this by default due to the excessive number of audit records generated. Enable with caution.",
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_chmod",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_fchmod",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_fchmodat"
+        ],
         "value": true
       },
       "auditd::config::audit_profiles::simp::audit_chown": {
@@ -142,6 +178,12 @@
           "RHEL-07-030402",
           "RHEL-07-030403",
           "RHEL-07-030400"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_chown",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_fchown",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_fchownat",
+          "xccdf_org:ssgproject:content_rule_audit_rules_dac_modification_lchown"
         ],
         "value": true
       },
@@ -172,6 +214,9 @@
           "SRG-OS-000470-GPOS-00214",
           "SRG-OS-000473-GPOS-00218",
           "RHEL-07-030490"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_audit_rules_login_events_faillock"
         ],
         "value": true
       },
@@ -204,6 +249,19 @@
           "SRG-OS-000458-GPOS-00203",
           "RHEL-07-030420",
           "RHEL-07-030750"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_audit_rules_unsuccessful_file_modification_creat",
+          "xccdf_org:ssgproject:content_rule_audit_rules_unsuccessful_file_modification_open",
+          "xccdf_org:ssgproject:content_rule_audit_rules_unsuccessful_file_modification_openat",
+          "xccdf_org:ssgproject:content_rule_audit_rules_unsuccessful_file_modification_open_by_handle_at",
+          "xccdf_org:ssgproject:content_rule_audit_rules_unsuccessful_file_modification_truncate",
+          "xccdf_org:ssgproject:content_rule_audit_rules_unsuccessful_file_modification_ftruncate",
+          "xccdf_org:ssgproject:content_rule_audit_rules_file_deletion_events_rmdir",
+          "xccdf_org:ssgproject:content_rule_audit_rules_file_deletion_events_unlink",
+          "xccdf_org:ssgproject:content_rule_audit_rules_file_deletion_events_unlinkat",
+          "xccdf_org:ssgproject:content_rule_audit_rules_file_deletion_events_rename",
+          "xccdf_org:ssgproject:content_rule_audit_rules_file_deletion_events_renameat"
         ],
         "value": true
       },
@@ -274,7 +332,7 @@
           "CCI-001855"
         ],
         "notes": "This value can be changed if there is a more ideal notification method for your systems",
-        "value": "SYSLOG"
+        "value": "EMAIL"
       },
       "auditd::syslog": {
         "identifiers": [
@@ -334,6 +392,9 @@
           "SRG-OS-000480-GPOS-00227",
           "CCI-000366"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_install_mcafee_antivirus"
+        ],
         "notes": "If ClamAV is not used, alternate malicious code detection software should be implemented",
         "value": true
       },
@@ -343,6 +404,9 @@
           "SRG-OS-000480-GPOS-00227",
           "CCI-000366"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_install_mcafee_antivirus"
+        ],
         "notes": "If ClamAV is not used, alternate malicious code detection software should be implemented",
         "value": false
       },
@@ -351,6 +415,9 @@
           "RHEL-07-030810",
           "SRG-OS-000480-GPOS-00227",
           "CCI-000366"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_install_mcafee_antivirus"
         ],
         "notes": "If ClamAV is not used, alternate malicious code detection software should be implemented",
         "value": true
@@ -377,6 +444,9 @@
           "CCI-000366"
         ],
         "notes": "If the SIMP default rules are modified, the running rules should be viewed to ensure they allow a minimal set inbound flows",
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_set_firewalld_default_zone"
+        ],
         "value": true
       },
       "iptables::ignore": {
@@ -420,6 +490,9 @@
           "SRG-OS-000023-GPOS-00006",
           "SRG-OS-000024-GPOS-00007",
           "CCI-000048"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_banner_etc_issue"
         ],
         "value": "us_dod"
       },
@@ -542,6 +615,9 @@
           "SRG-OS-000072-GPOS-00040",
           "CCI-000195"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_password_pam_difok"
+        ],
         "value": 8
       },
       "pam::cracklib_lcredit": {
@@ -580,6 +656,9 @@
           "SRG-OS-000072-GPOS-00040",
           "CCI-000195"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_password_pam_minclass"
+        ],
         "value": 4
       },
       "pam::cracklib_minlen": {
@@ -604,6 +683,9 @@
           "SRG-OS-000480-GPOS-00225",
           "CCI-000366"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_password_pam_retry"
+        ],
         "value": 3
       },
       "pam::cracklib_ucredit": {
@@ -619,6 +701,9 @@
           "RHEL-07-010370",
           "SRG-OS-000329-GPOS-00128",
           "CCI-002238"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_passwords_pam_faillock_deny"
         ],
         "value": 3
       },
@@ -659,6 +744,20 @@
           "RHEL-07-010370",
           "SRG-OS-000329-GPOS-00128",
           "CCI-002238"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_passwords_pam_faillock_unlock_time"
+        ],
+        "value": "never"
+      },
+      "pam::fail_interval": {
+        "identifiers": [
+          "SRG-OS-000329-GPOS-00128",
+          "SRG-OS-000021-GPOS-00005",
+          "CCI-002238"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_passwords_pam_faillock_interval"
         ],
         "value": 900
       },
@@ -758,6 +857,9 @@
           "SRG-OS-000341-GPOS-00132",
           "CCI-001849"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_rsyslog_cron_logging"
+        ],
         "value": true
       },
       "rsyslog::config::main_msg_queue_save_on_shutdown": {
@@ -827,6 +929,20 @@
           "RHEL-07-020220",
           "SRG-OS-000480-GPOS-00227",
           "CCI-000366"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_disable_ctrlaltdel_reboot"
+        ],
+        "value": false
+      },
+      "simp::ctrl_alt_del::log": {
+        "identifiers": [
+          "RHEL-07-020220",
+          "SRG-OS-000480-GPOS-00227",
+          "CCI-000366"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_disable_ctrlaltdel_reboot"
         ],
         "value": false
       },
@@ -977,6 +1093,9 @@
           "SRG-OS-000001-GPOS-00001",
           "CCI-000015",
           "CCI-002038"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_sudo_remove_nopasswd"
         ],
         "value": true
       },
@@ -1438,6 +1557,9 @@
           "CCI-000172"
         ],
         "notes": "If the default security relevant logs are changed, they should be justified, especially if fewer than the SIMP default are configured",
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_rsyslog_cron_logging"
+        ],
         "value": {
           "programs": [
             "sudo",
@@ -1556,13 +1678,19 @@
           "SRG-OS-000024-GPOS-00007",
           "CCI-000048"
         ],
-        "value": "/etc/issue.net"
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_sshd_enable_warning_banner"
+        ],
+        "value": "/etc/issue"
       },
       "ssh::server::conf::enable_fallback_ciphers": {
         "identifiers": [
           "RHEL-07-040600",
           "SRG-OS-000033-GPOS-00014",
           "CCI-000068"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_sshd_use_approved_ciphers"
         ],
         "value": true
       },
@@ -1639,6 +1767,19 @@
           "CCI-002235"
         ],
         "notes": "For EL7, this should be 'sandbox'. This will be fixed in a later revision of the map.",
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_sshd_use_priv_separation"
+        ],
+        "value": true
+      },
+      "ssh::server::conf::printlastlog": {
+        "identifiers": [
+          "CCI-000366",
+          "SRG-OS-000480-GPOS-00227"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_sshd_print_last_log"
+        ],
         "value": true
       },
       "ssh::server::conf::x11forwarding": {
@@ -1647,7 +1788,10 @@
           "SRG-OS-000480-GPOS-00227",
           "CCI-000366"
         ],
-        "value": false
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_sshd_enable_x11_forwarding"
+        ],
+        "value": true
       },
       "sssd::app_pki_dir": {
         "identifiers": [
@@ -1690,6 +1834,9 @@
           "SRG-OS-000250-GPOS-00093",
           "CCI-001453"
         ],
+        "oval-id": [
+          "xccdf_org:ssgproject:content_rule_ldap_client_start_tls"
+        ],
         "value": true
       },
       "sssd::provider::ldap::ldap_tls_cipher_suite": {
@@ -1697,6 +1844,9 @@
           "RHEL-07-040180",
           "SRG-OS-000250-GPOS-00093",
           "CCI-001453"
+        ],
+        "oval-id": [
+          "xccdf_org:ssgproject:content_rule_ldap_client_start_tls"
         ],
         "value": [
           "HIGH",
@@ -1813,13 +1963,26 @@
         ],
         "value": true
       },
+      "useradd::useradd::inactive": {
+        "identifiers": [
+          "SRG-OS-000118-GPOS-00060",
+          "CCI-000795"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_account_disable_post_pw_expiration"
+        ],
+        "value": 35
+      },
       "useradd::etc_profile::session_timeout": {
         "identifiers": [
           "RHEL-07-010070",
           "SRG-OS-000029-GPOS-00010",
           "CCI-000057"
         ],
-        "value": 15
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_tmout"
+        ],
+        "value": 10
       },
       "useradd::etc_profile::umask": {
         "identifiers": [
@@ -1887,6 +2050,9 @@
           "RHEL-07-020630",
           "SRG-OS-000480-GPOS-00227",
           "CCI-000366"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_have_homedir_login_defs"
         ],
         "value": true
       },
@@ -2022,7 +2188,10 @@
           "SRG-OS-000076-GPOS-00044",
           "CCI-000199"
         ],
-        "value": 180
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_maximum_age_login_defs"
+        ],
+        "value": 60
       },
       "useradd::login_defs::pass_min_days": {
         "identifiers": [
@@ -2053,7 +2222,21 @@
           "CCI-001813",
           "CCI-001814"
         ],
-        "value": "0077"
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_umask_etc_login_defs"
+        ],
+        "value": "077"
+      },
+      "useradd::etc_profile::session_timeout": {
+        "identifiers": [
+          "SRG-OS-000163-GPOS-00072",
+          "CCI-001133",
+          "CCI-000361"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_accounts_tmout"
+        ],
+        "value": 10
       },
       "useradd::shells_default": {
         "identifiers": [
@@ -2235,6 +2418,9 @@
         "identifiers": [
           "SI-3(a)"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_install_mcafee_antivirus"
+        ],
         "value": true
       },
       "simp_options::fips": {
@@ -2249,6 +2435,9 @@
       "simp_options::firewall": {
         "identifiers": [
           "AC-4"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_service_firewalld_enabled"
         ],
         "value": true
       },
@@ -2350,10 +2539,16 @@
           "CCI-002617",
           "SRG-OS-0000437-GPOS-00194"
         ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_clean_components_post_updating",
+          "xccdf_org:ssgproject:content_rule_ensure_gpgcheck_repo_metadata",
+          "xccdf_org:ssgproject:content_rule_ensure_gpgcheck_never_disabled"
+        ],
         "value": {
           "localpkg_gpgcheck": true,
           "gpgcheck": true,
-          "clean_requirements_on_remove": true
+          "clean_requirements_on_remove": true,
+          "repo_gpgcheck": true
         }
       }
     }
